--- a/src/container/Laurels/Laurels.css
+++ b/src/container/Laurels/Laurels.css
@@ -9,21 +9,36 @@ flex-wrap: wrap;
 .app__laurels_awards-card {
   flex: 1;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: flex-start;
   min-width: 230px;
   margin: 1rem;
+  position: relative;
+  padding-left: 50px;
 }
 
-.app__laurels_awards-card img {
-  width: 50px;
-  height: 50px;
+.roman-numeral {
+  position: absolute;
+  left: 0;
+  top: 0;
+  font-family: var(--font-base);
+  color: var(--color-golden);
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 1;
+  margin-right: 15px;
 }
 
 .app__laurels_awards-card_content {
   display: flex;
   flex-direction: column;
-  margin-left: 1rem;
+  margin-left: 0;
+}
+
+.app__laurels_awards-card_content p:first-child {
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+  font-size: 18px;
 }
 
 @media screen and (min-width: 1900px) {
